[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tasker"
version = "0.0.1"
description = "CLI application written from python for adding, updating, and deleting tasks"
readme = "README.md"
authors = [{ name = "Trishan Fernando", email = "sanjanatrishan@gmail.com" }]


[project.scripts]
tasker = "task_tracker.tasker:main"